[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1pitwall"
version = "1.1.1"
description = "F1 MCP server for Claude — 79 tools for live timing, telemetry, strategy, and 75 years of history. pip install f1pitwall[full] for plots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Darsh Joshi", email = "contact@darshjoshi.com" },
]
keywords = [
    "f1", "formula1", "mcp", "claude", "telemetry", "fastf1",
    "motorsport", "model-context-protocol", "race-data",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    # Live timing (raw SignalR) — needed by the 16 no-auth live tools, so they work in the
    # lite install too. Light compared to the [full] science stack.
    "websockets>=13.0",
    "aiohttp>=3.9.0",
    "certifi",
]

[project.optional-dependencies]
full = [
    "fastf1>=3.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # pyjwt is only used by the auth-gated live tools (telemetry/GPS), which stay in [full].
    "pyjwt>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/darshjoshi/pitwall"
Repository = "https://github.com/darshjoshi/pitwall"
Issues = "https://github.com/darshjoshi/pitwall/issues"

[project.scripts]
f1pitwall = "pitwall:main"

[tool.hatch.build.targets.sdist]
include = [
    "pitwall.py",
    "signalr_client.py",
    "decompressor.py",
    "merger.py",
    "topics.py",
    "auth_setup.py",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "pitwall.py",
    "signalr_client.py",
    "decompressor.py",
    "merger.py",
    "topics.py",
    "auth_setup.py",
]
